--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                   function(err) { console.error("Error signing in", err); });
       }
       function loadClient() {
-        gapi.client.setApiKey("YOUR_API_KEY");
+        gapi.client.setApiKey("aA1-ZDfTXhS4yQgzD7gW8d1N");
         return gapi.client.load("https://androidmanagement.googleapis.com/$discovery/rest?version=v1")
             .then(function() { console.log("GAPI client loaded for API"); },
                   function(err) { console.error("Error loading GAPI client for API", err); });
