Update on error message on API call

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         gapi.client.setApiKey("AIzaSyBYsa7lx9_fPq0ydSxUt3rstnF_npYD1T4");
         return gapi.client.load("https://androidmanagement.googleapis.com/$discovery/rest?version=v1")
             .then(function() { console.log("GAPI client loaded for API"); },
-                  function(err) { alert(`Google Server Response : ${err.error}`);  console.error("Error loading GAPI client for API", err); });
+                  function(err) { alert(`Client Load API => Google Server Response : ${err.error.message}`);  console.error("Error loading GAPI client for API", err); });
       }
       // Make sure the client is loaded and sign-in is complete before calling this method.
       function execute() {
