--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             .then(function(response) {
                     // Handle the results here (response.result has the parsed body).
                     console.log("Response", response);
+                    alert("Here is your policies: => ", response.policies)
                   },
                   function(err) { alert(`Policies API => Google Server Response : ${err.error.message}`); console.error("Execute error", err); });
       }
