testing response.rersult

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         })
             .then(function(response) {
                     // Handle the results here (response.result has the parsed body).
-                    console.log("Response", response.result.policies);
+                    console.log("Response", response.result);
                     alert("Here is your policies: ", response.policies[0])
                   },
                   function(err) { alert(`Policies API => Google Server Response : ${err.error.message}`); console.error("Execute error", err); });
