--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         })
             .then(function(response) {
                     // Handle the results here (response.result has the parsed body).
-                    console.log("Response", response.result.policies);
-                    alert("Here is your policies: ", response.result.policies[0])
+                    console.log("Response", response.result.policies[0]);
+                    alert("Here is your policies: ", response.result.policies[0].name)
                   },
                   function(err) { alert(`Policies API => Google Server Response : ${err.error.message}`); console.error("Execute error", err); });
       }
