update on label tag

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <p>Test GAPI Lib to work with EMM</p>
     <button class="btn red" id="signInBtn" onclick="authenticate().then(loadClient)">authorize and load</button>
     <button class="btn red" id="exeBtn" onclick="execute()">execute</button>
-    <div id="EMM_data"></div>
+    <label id="EMM_data"></label>
   </div>
 </section>
 
