--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
   <div class="container">
     <p>Test GAPI Lib to work with EMM</p>
     <button class="btn red" id="signInBtn" onclick="authenticate().then(loadClient)">authorize and load</button>
-    <button class="btn red" id="exeBtn" onclick="execute()">execute</button>
-    <label id="EMM_data" style="display: none;"></label>
+    <button class="btn red" id="exeBtn" style="display: none;" onclick="execute()">execute</button>
+    <label id="EMM_data"></label>
   </div>
 </section>
 
