--- a/index.html
+++ b/index.html
@@ -40,15 +40,16 @@
 
       var webTokens ='';
       function loadFrame() {
+        console.log("Web Token Creation Request")
         return gapi.client.androidmanagement.enterprises.webTokens.create({
-      "parent": "enterprises/LC02my9vtl",
-      "resource": {}
-    })
+          "parent": "enterprises/LC02my9vtl",
+          "resource": {}
+        })
         .then(function(response) {
-                // Handle the results here (response.result has the parsed body).
-                console.log("Response", response);
-              },
-              function(err) { console.error("Execute error", err); });
+                  // Handle the results here (response.result has the parsed body).
+                  console.log("Response", response);
+                },
+                function(err) { console.error("Execute error", err); });
       }
 
       // Make sure the client is loaded and sign-in is complete before calling this method.
@@ -57,13 +58,13 @@
         return gapi.client.androidmanagement.enterprises.policies.list({
           "parent": "enterprises/LC02my9vtl"
         })
-            .then(function(response) {
-                    // Handle the results here (response.result has the parsed body).
-                    console.log("Response length ", response.result.policies);
-                    document.getElementById('EMM_data').innerHTML = "<b>Policy Name fetched ==> "+response.result.policies[0].name +" </b>";
-                    alert("Here is your policies: "+ response.result.policies[0].name);
-                  },
-                  function(err) { alert(`Policies API => Google Server Response : ${err.error.message}`); console.error("Execute error", err); });
+        .then(function(response) {
+                // Handle the results here (response.result has the parsed body).
+                console.log("Policies", response.result.policies);
+                document.getElementById('EMM_data').innerHTML = "<b>Policy Name fetched ==> "+response.result.policies[0].name +" </b>";
+                alert("Here is your policies: "+ response.result.policies[0].name);
+              },
+              function(err) { alert(`Policies API => Google Server Response : ${err.error.message}`); console.error("Execute error", err); });
       }
 
       gapi.load("client:auth2", function() {
@@ -71,14 +72,13 @@
       });
 
       gapi.load('gapi.iframes', function() {
-    var options = {
-      'url': 'https://play.google.com/work/embedded/search?token=web_token&mode=SELECT',
-      'where': document.getElementById('container'),
-      'attributes': { style: 'width: 600px; height:1000px', scrolling: 'yes'}
-    }
-
-    var iframe = gapi.iframes.getContext().openChild(options);
-  });
+      var options = {
+        'url': 'https://play.google.com/work/embedded/search?token=web_token&mode=SELECT',
+        'where': document.getElementById('container'),
+        'attributes': { style: 'width: 600px; height:1000px', scrolling: 'yes'}
+      }
+      var iframe = gapi.iframes.getContext().openChild(options);
+      });
 
     </script>
 
