--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         return gapi.client.androidmanagement.enterprises.webTokens.create({
           "parent": "enterprises/LC02my9vtl",
           "resource": {
-          "parentFrameUrl": "https://vvngt900.github.io/RoutesTestEMM"
+          "parentFrameUrl": "https://vvngt900.github.io"
           }
         })
         .then(function(response) {
