--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       function loadDiv(webToken){
         gapi.load('gapi.iframes', function() {
         var options = {
-          'url': 'https://play.google.com/work/embedded/search?token={webToken}&mode=SELECT',
+          'url': 'https://play.google.com/work/embedded/search?token={webToken}',
           'where': document.getElementById('container'),
           'attributes': { style: 'width: 600px; height:1000px', scrolling: 'yes'}
         }
