update on url to test

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         return gapi.client.androidmanagement.enterprises.webTokens.create({
           "parent": "enterprises/LC02my9vtl",
           "resource": {
-          "parentFrameUrl": "https://vvngt900.github.io"
+          "parentFrameUrl": "https://vvngt900.github.io/RoutesTestEMM/"
           }
         })
         .then(function(response) {
