hardcode the web token

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       function loadDiv(webToken){
         gapi.load('gapi.iframes', function() {
         var options = {
-          'url': 'https://play.google.com/work/embedded/search?token={webToken}',
+          'url': 'https://play.google.com/managed/browse?token=WAP_6YqpDGvYp2jn0mZVs4LYb4WUSeOWNS13kIRdzla8X8fmhuwkTCFXWPuofFq3xZnhtxQs5BHfy8QIgOqhWZzblfsA_Dx73ZpOI9V8BP-WdiVUR_0Bb5zdWi8V7opojS5RASFzICM18ZqM9y0xnrkX3PfmXk0fc05HN1vnx8ndtj730mAkR-7U',
           'where': document.getElementById('container'),
           'attributes': { style: 'width: 600px; height:1000px', scrolling: 'yes'}
         }
