--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       function loadDiv(webToken){
         gapi.load('gapi.iframes', function() {
         var options = {
-          'url': `https://play.google.com/managed/browse?token={webToken}`,
+          'url': `https://play.google.com/managed/browse?token=${webToken}`,
           'where': document.getElementById('container'),
           'attributes': { style: 'width: 100%; height:800px', scrolling: 'yes'}
         }
@@ -104,7 +104,7 @@
     <p>Test GAPI Lib to work with EMM</p>
     <button class="btn red" id="signInBtn" onclick="authenticate().then(loadClient)">authorize and load</button>
     <button class="btn red" id="exeBtn" onclick="execute()">execute</button>
-    <button class="btn primary" id="iFrame" onclick="loadFrame().then(loadDiv)">Load Frame</button>
+    <button class="btn primary" id="iFrame" onclick="loadFrame()">Load Frame</button>
   </br></br>
     <div id="EMM_data"></div>
   </div>
