--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <p>Test GAPI Lib to work with EMM</p>
     <button class="btn red" id="signInBtn" onclick="authenticate().then(loadClient)">authorize and load</button>
     <button class="btn red" id="exeBtn" onclick="execute()">execute</button>
-    <button class="btn primary" id="iFrame" onclick="loadFrame()">Load Frame</button>
+    <button class="btn primary" id="iFrame" onclick="loadFrame().then(token =>loadDiv(token))">Load Frame</button>
   </br></br>
     <div id="EMM_data"></div>
   </div>
