--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
       });
 
       function loadDiv(webToken){
+        console.log("LoadDiv Called with token ::: ", webToken);
         gapi.load('gapi.iframes', function() {
         var options = {
           'url': "https://play.google.com/managed/browse?token="+webToken,
