response token to be checked

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
           }
         })
         .then(function(response) {
-                  // Handle the results here (response.result has the parsed body).
-                  console.log("Response", response);
+          
+                  console.log("Response Token to check", response.value);
                   loadDiv(response.value);
                 },
                 function(err) { console.error("Execute error", err); });
