the whole response

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         })
         .then(function(response) {
           
-                  console.log("Response Token to check", response.value);
+                  console.log("Response Token to check", response);
                   loadDiv(response.value);
                 },
                 function(err) { console.error("Execute error", err); });
