--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       });
 
       function loadDiv(webToken){
-        console.log("LoadDivFn Called with token ::: ", webToken);
+        console.log("LoadDivFn Called with Passedtoken ::: ", webToken);
         gapi.load('gapi.iframes', function() {
         var options = {
           'url': "https://play.google.com/managed/browse?token="+webToken,
