--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         console.log("LoadDivFn Called with Passedtoken ::: ", webToken);
         gapi.load('gapi.iframes', function() {
         var options = {
-          'url': "https://play.google.com/managed/browse?token="+webToken,
+          'url': "https://play.google.com/managed/browse?token="+webToken+"&mode=SELECT",
           'where': document.getElementById('container'),
           'attributes': { style: 'width: 100%; height:800px', scrolling: 'yes'}
         }
