--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 list_html += "</ul>"
 
                 document.getElementById('EMM_data').innerHTML = list_html;
-                alert("Here is your policies: "+ response.result.policies[0].name);
+                alert("Here is your policies: "+ response.result.devices[0].name);
               },
               function(err) { alert(`Policies API => Google Server Response : ${err.error.message}`); console.error("Execute error", err); });
       }
