--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
   <div class="container">
     <p>Test GAPI Lib to work with EMM</p>
     <button class="btn red" id="signInBtn" onclick="authenticate().then(loadClient)">authorize and load</button>
-    <button class="btn red" id="exeBtn" disabled="true" onclick="execute()">execute</button>
+    <button class="btn red" id="exeBtn" disabled="true" onclick="execute()">Devices</button>
     <button class="btn primary" id="iFrame" disabled="true" onclick="loadFrame()">Load Frame</button>
   </br></br>
     <div id="EMM_data"></div>
