--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             .signIn({scope: "https://www.googleapis.com/auth/androidmanagement"})
             .then(function() { 
               console.log("Sign-in successful"); 
-              document.getElementById('signInBtn').innerText ="Logged in successfully!!"
+              document.getElementById('signInBtn').innerText =`<i class="material-icons">verified_user</i> Proceed to test  <i class="material-icons">arrow_forward</i>`
               document.getElementById("exeBtn").disabled = false ;
               document.getElementById("iFrame").disabled = false;
             },
