--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
       <a href="#" class="brand-logo">Routes EMM Test!!</a>
       <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="">Login</a></li>
+        <li><a href="">Reload <i class="material-icons">swap_vert</i></a></li>
       </ul>
     </div>
     <div class="nav-content">
