Proceed to test button and removed the div

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             .signIn({scope: "https://www.googleapis.com/auth/androidmanagement"})
             .then(function() { 
               console.log("Sign-in successful"); 
-              document.getElementById('signInBtn').innerText =`<i class="material-icons">verified_user</i> Proceed to test  <i class="material-icons">arrow_forward</i>`
+              document.getElementById('signInBtn').innerText =` Proceed to test ==>`
               document.getElementById("exeBtn").disabled = false ;
               document.getElementById("iFrame").disabled = false;
             },
@@ -165,9 +165,9 @@
     <li><a href="collapsible.html">JavaScript</a></li>
   </ul>
 
-  <div id="test1" class="col s12">Test 1</div>
+  <!-- <div id="test1" class="col s12">Test 1</div>
   <div id="test2" class="col s12">Test 2</div>
-  <div id="test4" class="col s12">Test 4</div>
+  <div id="test4" class="col s12">Test 4</div> -->
 
 
   <!-- <nav class="black">
