enabling the patch button after successfull login

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
               document.getElementById('signInBtn').innerText =` Proceed to test ==>`
               document.getElementById("exeBtn").disabled = false ;
               document.getElementById("iFrame").disabled = false;
+              document.getElementById("patch").disabled = false;
             },
                   function(err) { console.error("Error signing in", err); document.getElementById('EMM_data').innerText ="error please check!!" });
       }
