Update on app for the patch

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
           "resource": {
             "applications": [
               {
-                "packageName": "com.android.chrome",
+                "packageName": "com.mobirix.airhockey",
                 "installType": "KIOSK",
                 "defaultPermissionPolicy": "GRANT"
               }
