--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
       <i class="material-icons">fingerprint</i> Authorize</button>
     <button class="btn red" id="exeBtn" disabled="true" onclick="execute()"><i class="material-icons">important_devices</i> Devices</button>
     <button class="btn primary" id="iFrame" disabled="true" onclick="loadFrame()"><i class="material-icons">filter_frames</i> Load Frame</button>
-    <button class="btn secondary" id="patch" disabled="true" onclick="Patchcall()"><i class="material-icons">get_app</i> Patch Policy</button>
+    <button class="btn secondary" id="patch" disabled="true" onclick="Patchcall()"><i class="material-icons">get_app</i> Patch Policy for a game</button>
   </br></br>
     <div id="EMM_data"></div>
   </div>
